--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,18 @@ based on the freely available Nullsoft Scriptable Install System
 (NSIS). Looks like the Windows port is becoming more and more
 Windows-ish. :-)
 
+BUGFIXES
+
+There were quite some bugs in IPv6 operation in 0.4.6. These are
+the bugs that were fixed:
+- HNA message parsing did not work.
+- Some IPv6 addresses were printed as IPv4 addresses in the
+  debug output.
+- The '-dispin' option now works again.
+- A filedescriptor leak in the IPv6 interface detection caused
+  olsrd to crash.
+
+
 0.4.6 ---------------------------------------------------------------------
 
 WINDOWS PORT!
