--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,13 @@ based on the freely available Nullsoft Scriptable Install System
 (NSIS). Looks like the Windows port is becoming more and more
 Windows-ish. :-)
 
+WIRELESS INTERFACE DETECTION ON WINDOWS
+
+Like the Linux version the Windows port is now able to tell WLAN
+interfaces from wired interfaces. We can now, for example, set
+different HELLO intervals for WLAN interfaces and wired interfaces,
+respectively.
+
 BUGFIXES
 
 There were quite some bugs in IPv6 operation in 0.4.6. These are
