--- a/README
+++ b/README
@@ -21,18 +21,21 @@ nn.11.04
 
   Plugins:
 
-  - Secure OLSR plugin. This plugin adds a signature to all messages
-    to ensure data integrity. This way only nodes with access to the
-    shared key can participate in the routing.
-    The key is read as the first 128 bits from /root/.olsr/olsrd_secure_key
-    You need to have the OpenSSL libs installed to use this plugin.
-
-  - Powerplugin. A plugin that uses OLSRs MPR flooding to spread information
-    about the powerstatus of nodes.
-
   - Dynamic Internet gateway. A plugin that dynamically adds and removes Internet
     HNA transmissions based on if there exists a default gateway to Internet
     with hopcount = 0(non OLSR gateway).
+
+  - Dot draw. A plugin that produces output in the dot format representing
+    the network topology.
+
+  - Secure OLSR plugin. This plugin adds a signature to all messages
+    to ensure data integrity. This way only nodes with access to the
+    shared key can participate in the routing.
+    You need to have the OpenSSL libs installed to use this plugin.
+
+  - Powerplugin. A plugin that uses OLSRs MPR flooding to spread information
+    about the powerstatus of nodes. Ment as an example plugin to get coders
+    started.
 
   Built in:
 
@@ -52,6 +55,7 @@ nn.11.04
 
   To compile:
   'make OS=targetos'
+  Just type 'make' to see a list of available targets.
 
   To install(you must be root):
   'make install'
