--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.14 2004/11/21 14:41:05 kattemat Exp $
+$Id: CHANGELOG,v 1.15 2004/11/22 01:22:31 tlopatic Exp $
 
 0.4.8 ---------------------------------------------------------------------
 
@@ -16,7 +16,7 @@ Olsrd no longer uses any thread library on its operation. Everything
 now happens in the main thread allowing for use of olsrd on platforms
 with no thread library.
 
-LINK QUALITY DETECTION
+ETX-LIKE LINK QUALITY DETECTION
 
 We can now determine the packet loss on a link by looking at the serial
 numbers of the OLSR messages received from a neighbour. This tells us how
@@ -49,12 +49,32 @@ and TCs in this case.
 It's best practice to set "LinkQualityLevel" to the same value on all
 nodes in a network.
 
+When determining the quality of a link olsrd only considers a given
+number of most recent OLSR packets received from its neighbours. By
+default, olsrd looks at the 10 most recent OLSR packets. This can be
+changed via the "LinkQualityWinSize" configuration option. Values
+between 3 and 128 are legal.
+
 NEW CONFIGFILE PARSER/FORMAT/SCHEME
 
 ToDo
 
 FREEBSD AND MAC OSX PORT
 
+This version offers an initial port of olsrd to FreeBSD and Mac OS
+X. Like the Windows port it currently does not support IPv6. As this
+is a very first try at supporting FreeBSD and Mac OS X, this port is
+probably not as reliable as the Linux version. We'd greatly appreciate
+feedback and bug reports. To compile you need GNU make. Then simply
+run "gmake OS=fbsd" to build the executable.
+
+CLEAR SCREEN
+
+Adding "ClearScreen yes" to the configuration file clears the screen
+each time before the debug output shows updated information. This
+makes the debug output easier to read in many cases. "ClearScreen no"
+is the default, if no "ClearScreen" directive is given in the
+configuration file.
 
 PLUGIN INTERFACE
 
