--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,15 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.18 2004/12/05 15:13:43 kattemat Exp $
+$Id: CHANGELOG,v 1.19 2004/12/30 18:09:35 kattemat Exp $
+
+0.4.9 ---------------------------------------------------------------------
+
+MINOR UPDATES
+
+- First specified interfaces IP is used as main address.
+- Broadcastflag is not checked on interface is fixed broadcast is
+  set in config.
+
+BUGFIXES
 
 0.4.8 ---------------------------------------------------------------------
 
