--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.20 2005/01/01 12:19:47 kattemat Exp $
+$Id: CHANGELOG,v 1.21 2005/01/03 19:03:24 kattemat Exp $
 
 0.4.9 ---------------------------------------------------------------------
 
@@ -19,6 +19,10 @@ MINOR UPDATES
   set in config.
 
 BUGFIXES
+
+A bug in the IPv6 prefix-fromIPaddr function has been fixed. This
+bug caused HNA prefixes to always be calculated to 0.
+
 
 0.4.8 ---------------------------------------------------------------------
 
